# soul-i-gemini

./: package-lock.json  readme.md  yt_cookies.txt
ai-ml-gcp/: .dockerignore  .env.example  .gitignore  AWS_MIGRATION_GUIDE.md  AWS_QUICK_START.md  Dockerfile  Makefile  README.md  api_testing.sh  app.py  cleanup_healing_collection.py  docker-compose.aws.yml  docker-compose.gcp.yml  explanation.md  local_requirements.txt  pyproject.toml  requirements.txt  souli.html  voice_requiremets.txt
ai-ml-gcp/.streamlit/: config.toml
ai-ml-gcp/configs/: livekit.yaml  pipeline.aws.yaml  pipeline.gcp.yaml  pipeline.yaml
ai-ml-gcp/data/: Souli_EnergyFramework_PW (1).xlsx  videos.csv
ai-ml-gcp/data/data/: videos.csv
ai-ml-gcp/pages/: chatbot_testing.py  data_ingestion.py  data_ingestion_improved.py  dev_testing.py  gemini_dev.py  gold_viewer.py  multi_data_ingestion_improved_page.py
ai-ml-gcp/scripts/: create_ec2.sh  create_vm.sh  deploy.sh  deploy_aws.sh  deploy_ec2.sh  reingest_activities.py  run_streamlit.sh  setup_ec2.sh  setup_gce.sh
ai-ml-gcp/souli_pipeline/: api.py  cli.py  config.py  config_loader.py  streamlit_app.py  streamlit_dev.py
ai-ml-gcp/souli_pipeline/conversation/: __init__.py  counselor.py  engine.py  gemini_engine.py  gemini_prompts.py  intake.py  intent.py  solution.py  summarizer.py
ai-ml-gcp/souli_pipeline/data/: videos.csv.example
ai-ml-gcp/souli_pipeline/energy/: normalize.py  pipeline.py
ai-ml-gcp/souli_pipeline/llm/: base.py  factory.py  gemini.py  http_json.py  ollama.py
ai-ml-gcp/tests/: qdrant_test.py
backend/: .dockerignore  (+10 more)
(+130 files in other folders)
